<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.Login"
        android:id="@+id/linearLayoutLoginActivity"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageLogo"
                android:layout_height="@dimen/logo_image_size"
                android:layout_marginBottom="@dimen/lists_title_bottom_margin"
                android:layout_width="@dimen/logo_image_size"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lists_title_bottom_margin"
                android:layout_width="match_parent"
                app:hintTextAppearance="@style/HintText">

            <EditText
                    android:background="@android:color/white"
                    android:hint="@string/hint_enter_email"
                    android:id="@+id/editTextEmail"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:nextFocusDown="@+id/edit_text_password"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="@dimen/login_buttons_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_big"
                android:layout_width="match_parent"
                app:hintTextAppearance="@style/HintText">

            <EditText
                    android:background="@android:color/white"
                    android:hint="@string/hint_enter_password"
                    android:id="@+id/editTextPassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="@dimen/login_buttons_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:background="@color/colorPrimary"
                android:id="@+id/loginPasswordButton"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginBottom="@dimen/lv_header_text_size"
                android:layout_width="match_parent"
                android:text="@string/button_signin_with_password"
                android:textColor="@android:color/white"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                style="@style/LoginCreateTextButton"/>

        <com.google.android.gms.common.SignInButton
                android:id="@+id/loginGoogleButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        <LinearLayout
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:orientation="horizontal">

            <TextView
                    style="@style/LoginCreateText"
                    android:id="@+id/tv_dont_have_account"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/text_dont_have_account"/>

            <TextView
                    style="@style/LoginCreateTextButton"
                    android:id="@+id/createAccountText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/button_create_account"/>
        </LinearLayout>
</LinearLayout>